--- a/index.css
+++ b/index.css
@@ -4,12 +4,15 @@
     box-sizing: border-box;
 }
 
+
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
+    border: 2px solid rgb(235, 24, 200);
+    box-shadow: 3px 3px 15px rgb(235, 24, 200);
 }
 
 .inner-container{
@@ -18,6 +21,10 @@
     border-radius: 5px;
     background-color:rgb(17, 33, 34);
     box-shadow: 3px 3px 15px rgb(74, 29, 158);
+}
+h1{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-bottom: 30px;
 }
 
 button{
@@ -31,9 +38,13 @@ button{
     background: transparent;
     box-shadow: 1px 1px 3px rgb(32, 178, 13);
 }
-button:hover{
-    box-shadow:1px 1px 10px red;
+.special{
+    box-shadow:1px 1px 3px red;
 }
+.size{
+    font-size: 28px;
+}
+
 button:focus{
     outline: none;
 }
